# ConvexDecomp

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
data/ResPlan/: README.md
data/interim/: README.md
data/osm/: README.md  osm_building_footprints_openstreetmap_odbl.gpkg
examples/: README.md
notebooks/: OSM_1_Preprocessing.ipynb  OSM_2_Decomposition.ipynb  OSM_FloorplanDecomposition.ipynb  OSM_Preprocessing.ipynb  README.md  ResPlan_1_Preprocessing.ipynb  ResPlan_2_Decomposition.ipynb  ResPlan_FloorplanDecomposition.ipynb  ResPlan_Preprocessing.ipynb
notebooks/helpers/: GHSL_gridplot.py  README.md  convex_decomposition.py  floorplan_dataset_diagnostics.py  hole_splitter.py  osm_convex_decomposer.py  osm_footprint_normalizer.py  osm_perimeter_builder.py  osm_perimeter_subdivider.py  polygon_convexity.py  polygon_edge_alignment.py  resplan_convex_decomposition.py  room_geometry.py  split_polygon_with_hole.py  svg_notebook_support.py  zone_piece_pipeline.py
scripts/: export_resplan_check_figures.py  sample_osm_buildings.py
src/convexdecomp/: __init__.py  notebook_utils.py
src/convexdecomp/core/: __init__.py  search.py
src/convexdecomp/diagnostics/: __init__.py  datasets.py  search.py
src/convexdecomp/geometry/: __init__.py  _split_polygon_with_hole.py  holes.py
src/convexdecomp/io/: svg.py
src/convexdecomp/osm/: __init__.py  assemble.py  correspondence.py  decompose.py  diagnostics.py  normalize.py  perimeter.py  sample_buildings.py  split_rules.py  subdivide.py
src/convexdecomp/resplan/: axes.py  (+8 more)
(+4 files in other folders)
